fix(backButton): spacing on mobile

--- a/src/components/BackButton/styles.scss
+++ b/src/components/BackButton/styles.scss
@@ -10,11 +10,15 @@
     font-weight: 500;
     font-size: 1.125rem;
     color: $color-primary-medium;
-    margin: 0 6rem;
+    margin: 0;
     cursor: pointer;
 
-    @media screen and (max-width: $breakpoint-desktop-max) {
+    @media screen and (max-width: $breakpoint-tablet-max) {
       margin: 0;
+    }
+
+    @media screen and (min-width: 1440.98px) {
+      padding: 2rem 6rem;
     }
   }
 }
